<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/oneSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/small_brush_size"
        android:contentDescription="@string/smallBrush"
       />

    <ImageButton
        android:id="@+id/twoSize"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/medium_brush_size"
        android:contentDescription="@string/mediumBrush"/>

    <ImageButton
        android:id="@+id/threeSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/medium_brush_size"
        android:contentDescription="@string/mediumBrush"/>

    <ImageButton
        android:id="@+id/fourSize"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/medium_brush_size"
        android:contentDescription="@string/mediumBrush"/>

    <ImageButton
        android:id="@+id/fiveSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/large_brush_size"
        android:contentDescription="@string/largeBrush" />

</LinearLayout>