<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snackBarPurpose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/canvasContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:contentDescription="@string/background_image" />

        <com.russvkm.kidsdrawing.DrawingStuff
            android:id="@+id/drawingStuff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/border_element" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/canvasContainer">

        <ImageButton
            android:id="@+id/colorPicker"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="7.5dp"
            android:background="@drawable/ic_color_lens"
            android:contentDescription="@string/brush_manager" />

        <ImageButton
            android:id="@+id/galleryManager"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="7.5dp"
            android:layout_marginStart="7.5dp"
            android:background="@drawable/ic_attach_file"
            android:contentDescription="@string/brush_manager" />

        <ImageButton
            android:id="@+id/undoAction"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="7.5dp"
            android:layout_marginEnd="7.5dp"
            android:background="@drawable/ic_undo"
            android:contentDescription="@string/undo_action" />

        <ImageButton
            android:id="@+id/brushManager"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="7.5dp"
            android:layout_marginEnd="7.5dp"
            android:background="@drawable/ic_brush_black"
            android:contentDescription="@string/brush_manager" />

        <ImageButton
            android:id="@+id/saveAction"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="7.5dp"
            android:background="@drawable/ic_save"
            android:contentDescription="@string/save_action" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>